unpackaged/main/default/objects/EventApi__Venue__c/EventApi__Venue__c.object-meta.xml
<CustomObject>
    <description>Manage Event Locations and Venues.</description>
    <label>Venue</label>
    <nameField>
        <label>Venue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Venues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>