unpackaged/main/default/objects/EventApi__Venue__c/fields/EventApi__City__c.field-meta.xml
<CustomField>
    <fullName>EventApi__City__c</fullName>
    <description>The physical address (city) for the venue.</description>
    <inlineHelpText>The physical address (city) for the venue.</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>