unpackaged/main/default/objects/EventApi__Venue__c/fields/EventApi__Country__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Country__c</fullName>
    <description>The country where the venue is located.</description>
    <inlineHelpText>The country where the venue is located.</inlineHelpText>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>