unpackaged/main/default/objects/EventApi__Venue__c/fields/EventApi__Description__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Description__c</fullName>
    <description>Optional description for the Venue.</description>
    <inlineHelpText>Optional description for the Venue.</inlineHelpText>
    <label>DEPRECATED</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>