unpackaged/main/default/objects/EventApi__Venue__c/fields/EventApi__Display_Map__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Display_Map__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked and the venue address is entered, displays a Google map on the event page as part of the venue information.</description>
    <inlineHelpText>When checked and the venue address is entered, displays a Google map on the event page as part of the venue information.</inlineHelpText>
    <label>Display Map</label>
    <type>Checkbox</type>
</CustomField>