unpackaged/main/default/objects/EventApi__Venue__c/fields/EventApi__Event_Location__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Event_Location__c</fullName>
    <description>The value populated in this field helps show the event in the geo-location view in the event listing page.</description>
    <inlineHelpText>The value populated in this field helps show the event in the geo-location view in the event listing page.</inlineHelpText>
    <label>Event Location</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>