unpackaged/main/default/objects/EventApi__Venue__c/fields/EventApi__HTML_Description__c.field-meta.xml
<CustomField>
    <fullName>EventApi__HTML_Description__c</fullName>
    <description>Optional description for the Venue.</description>
    <inlineHelpText>Optional description for the Venue.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>