unpackaged/main/default/objects/EventApi__Venue__c/fields/EventApi__Image_URL__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Image_URL__c</fullName>
    <description>Image displays with the venue information.</description>
    <inlineHelpText>Image displays with the venue information.e</inlineHelpText>
    <label>Image URL</label>
    <type>Url</type>
</CustomField>