unpackaged/main/default/objects/EventApi__Venue__c/fields/EventApi__Is_Primary_Venue__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Primary_Venue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the venue is displayed first.</description>
    <inlineHelpText>When checked, the venue is displayed first.</inlineHelpText>
    <label>Is Primary Venue</label>
    <type>Checkbox</type>
</CustomField>