unpackaged/main/default/objects/EventApi__Venue__c/fields/EventApi__Phone__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Phone__c</fullName>
    <description>The displayed phone number for the venue.</description>
    <inlineHelpText>The displayed phone number for the venue.</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>