unpackaged/main/default/objects/EventApi__Venue__c/fields/EventApi__Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Postal_Code__c</fullName>
    <description>The physical address (postal code) for the venue.</description>
    <inlineHelpText>The physical address (postal code) for the venue.</inlineHelpText>
    <label>Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>