unpackaged/main/default/objects/EventApi__Venue__c/fields/EventApi__State__c.field-meta.xml
<CustomField>
    <fullName>EventApi__State__c</fullName>
    <description>The physical address (state/province/county) for the venue.</description>
    <inlineHelpText>The physical address (state/province/county) for the venue.</inlineHelpText>
    <label>State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>