unpackaged/main/default/objects/EventApi__Venue__c/fields/EventApi__Street__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Street__c</fullName>
    <description>The physical street address for the venue.</description>
    <inlineHelpText>The physical street address for the venue.</inlineHelpText>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>