unpackaged/main/default/objects/EventApi__Venue__c/fields/EventApi__Website__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Website__c</fullName>
    <description>The displayed website for the venue.</description>
    <inlineHelpText>The displayed website for the venue.</inlineHelpText>
    <label>Website</label>
    <type>Url</type>
</CustomField>