unpackaged/main/default/objects/EventApi__Venue__c/listViews/EventApi__All.listView-meta.xml
<ListView>
    <fullName>EventApi__All</fullName>
    <columns>NAME</columns>
    <columns>EventApi__City__c</columns>
    <columns>EventApi__State__c</columns>
    <columns>EventApi__Website__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>